# main

./: .gitmodules  docker-compose.yml
config/nginx/: default.conf
config/studio/: layout.json
demos/: roslibpy_demo.ipynb
eai-helix/: setup.py
eai-helix/embodiedai_helix_api/: __init__.py  helix.py
embodiedai-helix-api/: README.md  pyproject.toml
embodiedai-helix-api/tests/: __init__.py  test_helix.py
embodiedai-helix-sdk/: README.md  README_hardware.md  pyproject.toml  requirements.txt  setup.py
embodiedai-helix-sdk/embodiedai_helix_sdk/: helix.py
embodiedai-helix-sdk/src/embodiedai_helix_sdk/: __init__.py  helix.py
embodiedai-helix-sdk/tests/: test_hardware.py  test_hardware_integration.py  test_helix.py
helix-api/: README.md  pyproject.toml  requirements.txt  setup.py
helix-api/helix_api/: __init__.py  helix.py
helix-api/tests/: test_helix.py
oldies/: README.md
oldies/demos/: display_demo_tendon_positions.csv
rpicam/: Dockerfile  build.sh  camera.launch.py  docker-compose.yml  notes  ros_entrypoint.sh  run.sh  view.py
rpicam/ros2_ws/src/rpicam_gscam/: CMakeLists.txt  README.md  package.xml
rpicam/ros2_ws/src/rpicam_gscam/launch/: camera.launch.py
