[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embodiedai-helix-sdk"
version = "0.1.0"
description = "A Python SDK to control Helix robot arm via ROS"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "roslibpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
# Note: Due to ROS plugin conflicts, tests should be run with:
# PYTEST_DISABLE_PLUGIN_AUTOLOAD=1 pytest tests/
# or use the provided test script: ./run_tests.sh
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
