[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embodiedai-helix-sdk"
authors = [
    { name = "Embodied AI SA", email = "info@embodiedai.ch" },
    ]
version = "0.2.0"
description = "A Python SDK to control Helix robot arm via ROS"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "roslibpy>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.4",
]

[tool.pytest.ini_options]
addopts = "--disable-plugin-autoload"


[tool.ruff]
line-length = 180