[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helix-api"
version = "0.1.0"
description = "A minimal Python package to control Helix robot arm via ROS"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "roslibpy>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
